syntax = "proto3";

package notif.middleware.notif.user.v1;

option go_package = "github.com/NpoolPlatform/kunman/message/notif/middleware/v1/notif/user";

import "basetypes/v1/conds.proto";
import "basetypes/v1/usedfor.proto";

message NotifUser {
  // @inject_tag: sql:"id"
  uint32 ID = 9;
  // @inject_tag: sql:"ent_id"
  string EntID = 10;
  // @inject_tag: sql:"app_id"
  string AppID = 20;
  // @inject_tag: sql:"user_id"
  string UserID = 30;
  // @inject_tag: sql:"event_type"
  string EventTypeStr = 40;
  basetypes.v1.UsedFor EventType = 50;
  // @inject_tag: sql:"created_at"
  uint32 CreatedAt = 60;
  // @inject_tag: sql:"updated_at"
  uint32 UpdatedAt = 70;
}

message NotifUserReq {
  optional uint32 ID = 9;
  optional string EntID = 10;
  optional string AppID = 20;
  optional string UserID = 30;
  optional basetypes.v1.UsedFor EventType = 40;
}

message Conds {
  optional basetypes.v1.Uint32Val ID = 9;
  optional basetypes.v1.StringVal EntID = 10;
  optional basetypes.v1.StringSliceVal EntIDs = 20;
  optional basetypes.v1.StringVal AppID = 30;
  optional basetypes.v1.StringVal UserID = 40;
  optional basetypes.v1.Uint32Val EventType = 50;
}

